# moscode-telegram-bot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  supervisord.conf
app/: main.py  schemas.py  settings.py
bot/: main.py
faust_app/: main.py
